--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter application that handles task management and todo tra
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: "none" # Remove this line if you wish to publish to pub.dev
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.15.1 <3.0.0"
+  sdk: '>=2.15.1 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -29,21 +29,37 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  bloc:
-  flutter_bloc:
-  equatable:
-  http:
+  bloc: ^8.0.3
+  # cloud_firestore: ^3.4.5
+  cupertino_icons: ^1.0.3
+  dio: ^4.0.6
+  email_validator: ^2.0.1
+  equatable: ^2.0.3
+  file_picker: ^4.5.1
+  flutter_bloc: ^8.0.1
+  flutter_slidable: ^1.2.1
+  fluttertoast: ^8.0.9
+  # flutter_sound_lite: ^8.1.9
+  firebase_auth: ^3.3.4
+  firebase_core: ^1.17.0
+  # firebase_storage: ^10.2.16
+  gallery_saver: ^2.3.2
+  http: ^0.13.4
   intl: ^0.17.0
-  flutter_slidable: ^0.5.7
-  syncfusion_flutter_datepicker: ^20.1.48
+  permission_handler: ^8.1.2
+  syncfusion_flutter_datepicker: ^20.2.48
+  material_design_icons_flutter: ^5.0.6996
+  shared_preferences: ^2.0.15
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -51,9 +67,14 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
-
+  hive_generator: ^1.1.3
+  build_runner: ^2.2.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+flutter_icons:
+  android: true
+  ios: true
+  image_path: 'assets/icon-2.png'
 
 # The following section is specific to Flutter.
 flutter:
@@ -61,7 +82,6 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   assets:
     - Images/
@@ -99,6 +119,9 @@ flutter:
           weight: 400
         - asset: Fonts/SFUIDisplay-Thin.otf
           weight: 200
+    - family: MyFlutterApp
+      fonts:
+        - asset: Fonts/MyFlutterApp.ttf
 
   #       - asset: fonts/Schyler-Italic.ttf
   #   - family: Trajan Pro
